src/styles/Guaranteed.css
.guaranteed-container {
  display: flex;
  justify-content: space-between;
  gap: 2em;
  /* align-items: center; */
}
.guaranteed-container > div {
  padding: 2em;
  display: flex;
  flex-direction: column;
  gap: 1em;
  height: 100vh;
  flex-basis: 30%;
}

.guaranteed-container > div h2 {
  font-size: 24px;
}
.guaranteed-container > div p {
  font-size: 18px;
}

.guaranteed-container .image-container {
  width: 100%;
  flex-basis: 30%;
}
/* 
.guaranteed-container .image-container img {
  width: 100%;
  height: auto;
  display: inline-block;
} */

